--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Noam Alffasy</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body data-spy="scroll" data-target="#navbar" data-offset="40">
