--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body data-spy="scroll" data-target="#navbar" data-offset="40">
   <app>
-    <loading></loading>
+    <div class="loading">
+      <p>loading the app</p>
+    </div>
   </app>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
